--- a/Semi_project_01/.classpath
+++ b/Semi_project_01/.classpath
@@ -13,9 +13,8 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="/Users/kimminjeong/Desktop/자바_프로그래머_과정_0803/다운로드/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/Users/kimminjeong/Desktop/자바_프로그래머_과정_0803/다운로드/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="/Users/kimminjeong/Desktop/자바_프로그래머_과정_0803/다운로드/ojdbc6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
+	<classpathentry kind="lib" path="D:/jar/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/jar/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
